--- a/examples/2disenio-maquetacion-css/reto/index.html
+++ b/examples/2disenio-maquetacion-css/reto/index.html
@@ -35,7 +35,7 @@
             <section class="presentation">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda natus accusantium veritatis placeat sint alias eos quisquam vel. Blanditiis praesentium debitis doloribus esse vel, dicta laboriosam ratione in magni aliquid.</p>
                <div class="img-page">
-                    <img src="" alt="imagen de presentaicon">
+                    <img src="../../resources/logo.webp" alt="imagen de presentaicon">
                </div>
             </section>
             <section class="especializacion">
